Todo los cambios hechos para hacer el video
